tests/ui/not-zeroize-on-drop/zeroize-on-drop.stderr
error: `ZeroizeOnDrop` doesn't support this option
 --> tests/ui/not-zeroize-on-drop/zeroize-on-drop.rs:7:30
  |
7 | #[derive_where(ZeroizeOnDrop(no_drop))]
  |                              ^^^^^^^
